fixing mod interactions
fixing mod interactions between the mods in the pack

--- a/localisation/english/l_english_fixes.yml
+++ b/localisation/english/l_english_fixes.yml
@@ -6,9 +6,12 @@
  edict_blokkat_popup:0 "Fix Blokkat menu"
  edict_blokkat_popup_desc:0 "Fix Blokkat menu"
  edict_lyra_win:0 "Win the game"
- edict_lyra_win_desc:0 "Ectivating this edit will win the game"
+ edict_lyra_win_desc:0 "Activating this edit will win the game"
  lyra_win:0 "only lyra can activate this :)"
  lyra_win_game:0 "The empire lyra is playing will win the game"
  edict_fix_ehof:0 "Fix ehof"
  edict_fix_ehof_desc:0 "Fixes ehof not removal not allowing for megas to be build there"
  mod_empire_size_pops_mult_offset: ""
+ mod_country_unity_produces_mult_offset: ""
+ mod_country_mega_cap: "Megastructure build cap free"
+ meta_megastructure_cap: "Megastructure build cap free"
